--- a/default.env
+++ b/default.env
@@ -100,8 +100,8 @@ EXIST_PLAYER_AFTER_LOGOUT=false
 ENABLE_DEFENSE_OTHER_GUILD_PLAYER=false
 COOP_PLAYER_MAX_NUM=4
 MAX_PLAYERS=32
-SERVER_NAME=jammsen-docker-generated-###RANDOM###
-SERVER_DESCRIPTION=Palworld-Dedicated-Server running in Docker by jammsen
+SERVER_NAME=watersound-server-docker-generated-###RANDOM###
+SERVER_DESCRIPTION=Palworld-Dedicated-Server running in Docker by Need
 ADMIN_PASSWORD=adminPasswordHere
 SERVER_PASSWORD=serverPasswordHere
 PUBLIC_PORT=8211
